--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,6 +1,6 @@
 [core]
   whitespace   = fix,-indent-with-non-tab,trailing-space,cr-at-eol
-  editor       = subl.exe
+  editor       = subl.exe -n -w
   excludesfile = ~/.gitignore_global
 [push]
   # default = tracking
