--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,9 +1,8 @@
 [core]
   whitespace   = fix,-indent-with-non-tab,trailing-space,cr-at-eol
-  editor       = subl.exe -n -w
+  editor       = vim
   excludesfile = ~/.gitignore_global
 [push]
-  # default = tracking
   default = simple
 [color]
   ui = true
@@ -42,17 +41,12 @@
   fix                = "!git add . && git commit --amend --no-edit"
   rmdf               = "!git rm $(git ls-files --deleted)"
   export             = "!git clone --depth 1 $1 && rm -rf \"$(basename $1 .git)/.git\" -"
-  subl               = "!git diff $@ | subl"
-  mdr                = "!git diff $@ | mdr"
-  gh                 = "!/Applications/Github.app/Contents/MacOS/github_cli ${@:-.}"
   branches           = branch -avv
   wip                = "!git add . && git commit -m 'WIP'"
   rebase-from-master = "!git co master && git pull && git co - && git rebase master"
   rewrite-history    = "!git rebase -i $(git merge-base master HEAD)"
   finalise           = "!git rebase-from-master && git rewrite-history"
-  browser            = "!open $(echo $(git config --get remote.origin.url) |sed 's/:/\\//g' |sed 's/git@/https:\\/\\//g' |sed 's/\\.git//g')"
   cleanup            = "!git remote prune origin && git repack && git gc"
-  # resetfromsource  = "!git checkout master && git reset --hard && git pull --rebase source master"
 [branch]
   autosetuprebase = always
 [include]
