Add some settings + refacto on core.

--- a/dotfiles/virtuawin.cfg
+++ b/dotfiles/virtuawin.cfg
@@ -11,7 +11,16 @@ hotkey8# 54 1 7 6
 hotkey9# 55 1 7 7
 hotkey10# 56 1 7 8
 hotkey11# 57 1 7 9
-desktopNameCount# 0
+desktopNameCount# 9
+desktopName1# Exploring
+desktopName2# Coding
+desktopName3# Fun
+desktopName4# Social
+desktopName5# Music
+desktopName6# 
+desktopName7# 
+desktopName8# 
+desktopName9# Administration
 deskX# 3
 deskY# 3
 deskWrap# 0
