--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "my-unfortunately",
   "version": "1.0.0",
-  "devDependencies": {
-    "shelljs": "0.5.1"
-  },
   "dependencies": {
-    "yargs": "^3.12.0"
+    "shelljs": "0.5.3",
+    "yargs": "3.29.0"
   }
 }
